--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3>I'm Vishvas</h3>
         <span class="tag">Web Developer</span>
 
-        <p>I am a web developer based in Gujarat, India.
+        <p>I am a web developer in Ahmedabad, Gujarat.
           I am a Future graduate of the Computer Engineering at Sal Institute.
           I am passionate about building websites and applications that are both functional and visually appealing.
           I have experience with a variety of web development technologies, including HTML, CSS, JavaScript, Bootstrap.  </p>
