--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="https://drive.google.com/file/d/1dYznvUXB1BNIr1DshC8EHnVYQCtWbh2v/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
+          <a href="https://drive.google.com/file/d/1PJlxnedPlvkAG8JgEB0-4VkDOz2P_sKg/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
