projects section added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- navbar starts -->
   <header>
-    <a href="/" class="logo"><i class="fab fa-node-js"></i> Vishvas</a>
+    <a href="/" class="logo">Portfolio</a>
 
     <div id="menu" class="fas fa-bars"></div>
     <nav class="navbar">
@@ -34,6 +34,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#education">Education</a></li>
+        <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -83,9 +84,9 @@
         <span class="tag">Web Developer</span>
 
         <p>I am a web developer in Ahmedabad, Gujarat.
-          I am a Future graduate of the Computer Engineering at Sal Institute.
-          I am passionate about building websites and applications that are both functional and visually appealing.
-          I have experience with a variety of web development technologies, including HTML, CSS, JavaScript, Bootstrap.  </p>
+          I am graduated from Sal Institute in Computer Engineering.
+          I am passionate about developing web applications that are both highly functional and visually engaging.
+          I have experience with various web development technologies, including HTML, CSS, JavaScript, Bootstrap, Angular, and Spring Boot v3.  </p>
 
         <div class="box-container">
 
@@ -135,7 +136,7 @@
         <div class="content">
           <h3>Bachelor of Engineering in Computer Engineering</h3>
           <p>SAL Institute of Technology & Engineering Research | GTU</p>
-          <h4>2020-2024 | Pursuing</h4>
+          <h4>2020-2024 | Completed</h4>
         </div>
       </div>
 
@@ -154,6 +155,23 @@
   </section>
   <!-- education section ends -->
 
+  <!-- work project section starts -->
+<section class="work" id="work">
+
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+
+  <div class="box-container">
+
+</div>
+
+<!-- <div class="viewall">
+  <a href="/projects" class="btn"><span>View All</span>
+    <i class="fas fa-arrow-right"></i>
+</a>
+</div> -->
+
+</section>
+<!-- work project section ends -->
   <!-- contact section starts -->
   <section class="contact" id="contact">
 
