new projects  with links, resume updated

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="https://drive.google.com/file/d/12_akFMkOmB3rWQC4MfdiFGQ4raRlGPIe/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
+          <a href="https://drive.google.com/file/d/1Xq_ek7qgBx7I_NO7UmGajB62ybGkiJKR/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
@@ -146,7 +146,7 @@
         </div>
         <div class="content">
           <h3>HSC Science | A-Group</h3>
-          <p>Shree Daxinamurti Vidyalaya,Botad | GSHSEb</p>
+          <p>Shree Daxinamurti Vidyalaya,Botad | GSHSEB</p>
           <h4>2018-2020 | Completed</h4>
         </div>
       </div>
